--- a/module/software/CMakeLists.txt
+++ b/module/software/CMakeLists.txt
@@ -53,6 +53,7 @@ pico_generate_pio_header(${PROJECT_NAME} module.pio)
 target_link_libraries(${PROJECT_NAME}
   pico_stdlib
   hardware_pio
+  hardware_spi
   pico_multicore
   )
 
